Add endpoint for deleting student from system
